# rocket_diesel_postgres_react

./: .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2018-04-16-143021_create_posts/: up.sql
migrations/2018-04-16-194539_create_images/: up.sql
migrations/2018-04-16-195335_add_likes_to_images/: down.sql  up.sql
migrations/2018-04-17-012336_make_images_likes_default_0/: down.sql  up.sql
migrations/2018-04-18-233459_create_users/: up.sql
migrations/2018-04-18-234417_add_user_to_posts/: down.sql  up.sql
src/: main.rs  models.rs  pool.rs  routes.rs  schema.rs
src/models/: images.rs  mod.rs  post.rs
src/routes/: file_server.rs  mod.rs  routes_images.rs  routes_posts.rs
static/: package-lock.json  package.json
static/public/: index.html
static/src/: App.js  index.css  index.js
static/src/components/: Fab.js
static/src/constants/: index.js
static/src/grid/: NumericEditor.js
