[package]
name = "rocket_diesel_postgres_react"
version = "0.1.0"
authors = ["phil"]

#  https://github.com/clux/webapp-rs
[dependencies]
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
rocket = "0.3.8"
rocket_codegen = "0.3.8"
rocket_contrib = "0.3.8"
serde = "1.0.38"
serde_derive = "1.0.38"
serde_json = "1.0.14"
dotenv = "0.11.0"

[dependencies.diesel]
features = ["postgres"]
version = "1.2.2"
